--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -1,3 +1,13 @@
+$fontStack: Helvetica, sans-serif
+$primaryColor: #0277bd
+$secondaryColor: #7986cb
+$secondaryColorLigth: #aab6fe
+$secondaryColorDark: #49599a
+$darkColor: #004c8c
+$ligthColor: #58a5f0
+$fontColor: #ffffff
+$fontColorDark: #000000
+
 body
     padding: 0 
     margin: 0 
@@ -5,3 +15,35 @@ body
 
 *
     margin: 0
+
+
+.pagina
+    text-align: center
+    justify-content: center
+
+
+.empresaInput
+    padding: 2vw
+    margin: 2vw
+    max-width: 96vw
+    text-align: center
+
+
+.empresaInputMain
+    padding: auto
+    margin: auto
+    max-width: 500px
+    text-align: center
+
+.empresaInputForm
+    max-width: 300px
+    padding: auto
+    margin: auto
+
+.select
+    max-width: 500px
+    margin: 4px auto 4px auto !important
+    padding: 4px auto 4px auto !important
+
+.peUnidades
+    background-color: $secondaryColorLigth !important
