--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -16,16 +16,23 @@ body
 *
     margin: 0
 
+.tarjeta
+    width: 30%
+    display: inline-block !important
+    margin: 1%
 
 .pagina
     text-align: center
     justify-content: center
 
+.textoIntro
+    margin-right: 10%
+    margin-left: 10%
 
 .empresaInput
     padding: 2vw
-    margin: 2vw
-    max-width: 96vw
+    margin: auto
+    width: 50% !important
     text-align: center
 
 
