Cambio nombre de la empresa y back button

--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -25,6 +25,7 @@ $fontColorDark: #000000
   font: bolder
   font-weight: bold
   color: $fontColor
+  font-size: 20px
 
 .navBarItem
   text-decoration: none
@@ -32,6 +33,7 @@ $fontColorDark: #000000
   margin-right: 5px
   margin-top: 8px
   padding: auto
+  font-weight: bold !important
   
 #footer
   background-color: $ligthColor
