--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -12,7 +12,10 @@ $fontColorDark: #000000
     max-width: 80vw !important
     margin: 10px auto 10px auto !important
     padding: auto !important
-    overflow-x: scroll !important
+
+
+.tablaEmpresas thead tr th
+    min-width: 120px !important
 
 .overflowForce
     overflow: auto !important
