--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -9,8 +9,8 @@ $fontColor: #ffffff
 $fontColorDark: #000000
 
 body
-    padding: 0 
-    margin: 0 
+    padding: 0
+    margin: 0
     background-color: #ececec
 
 *
@@ -35,7 +35,6 @@ body
     width: 50% !important
     text-align: center
 
-
 .empresaInputMain
     padding: auto
     margin: auto
@@ -54,3 +53,10 @@ body
 
 .peUnidades
     background-color: $secondaryColorLigth !important
+
+.btnFlotante
+    position: absolute
+    left: 10px
+    top: 50px
+    z-index: 999
+
