--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -26,6 +26,16 @@ $fontColorDark: #000000
     margin-right: auto !important
     padding: auto !important
 
+.infoProducto
+    table-layout: auto !important
+    max-width: 90vw !important
+    margin-left: auto !important
+    margin-right: auto !important
+    padding: auto !important
+
+.tablaCostosVar
+    width: 30vw !important
+
 
 .editButton
     color: $fontColor !important
