apalancamiento y correciones en Navbar

--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -15,10 +15,19 @@ $fontColorDark: #000000
   margin: 0
   padding: 0
   height: 50px
+  
+
+#responsive-navbar-nav
+  background-color: $primaryColor
+  border-radius: 10px
+  margin-top: 5px
+  padding-top: 5px
+  column-gap: 10px
 
 #navBarDropdown
   text-decoration: none
   color: $fontColor
+  font-weight: bold !important
 
 .navBarBrand
   text-decoration: none
