Cambios visuales en las tablas

--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -34,8 +34,11 @@ $fontColorDark: #000000
     padding: auto !important
 
 .tablaCostosVar
-    width: 30vw !important
+    width: 10% !important
 
+.centerText
+    vertical-align: middle !important
+    text-align: center !important
 
 .editButton
     color: $fontColor !important
