Correcciones en Home, NavBar y varios productos

--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -35,6 +35,7 @@ $fontColorDark: #000000
   font-weight: bold
   color: $fontColor
   font-size: 20px
+  margin-left: 5px
 
 .navBarItem
   text-decoration: none
