--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -47,10 +47,26 @@ $fontColorDark: #000000
     background-color: $primaryColor !important
     font-weight: bold !important
 
+.buttonSecondary
+    background-color: $ligthColor !important
+    font-weight: bold !important
+
 .buttonSecondaryDark
     background-color: $secondaryColorDark !important
     color: $fontColor
+    
 
 
 .tdTitulo
     font-weight: bold 
+
+.smallFont
+    font-size: 13.5px
+
+
+.bgDarkColor li
+    background-color: $primaryColor !important
+    color: white !important
+    border: 1px solid white !important
+
+
