--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -17,9 +17,14 @@ body
     margin: 0
 
 .tarjeta
-    width: 30%
+    width: 20%
     display: inline-block !important
     margin: 1%
+
+.cardHeader
+    font-weight: bold !important
+    background-color: $primaryColor !important
+    color: white
 
 .pagina
     text-align: center
@@ -63,3 +68,21 @@ body
 .generalBody
     padding-bottom: 2vw
     padding-top: 2vw
+
+.checkBox
+    margin: 5px
+    padding: 5px
+
+.checkboxContainer
+    display: flex
+    justify-content: center
+    flex: .25
+
+.carrusel
+    color: black !important
+
+.imgC
+    max-height: 340px
+
+
+    
