corrigiendo algunos estilos"

--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -80,9 +80,15 @@ body
 
 .carrusel
     color: black !important
+    height: 100%
 
 .imgC
     max-height: 340px
+
+.textosEncuadre
+    margin: auto 5%
+    text-align: justify
+    min-height: 14em
 
 
     
