--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -64,6 +64,7 @@ body
     left: 10px
     top: 50px
     z-index: 999
+    border-radius: 50px !important
 
 .generalBody
     padding-bottom: 2vw
@@ -84,5 +85,17 @@ body
 .imgC
     max-height: 340px
 
+.steperButton
+    border-radius: 70px !important
+    padding: 0px !important
+    margin: 0px !important
+
+.inputPorcentajes
+    display: flex !important
+    max-width: 200px
+    height: 40px
+
+.dropdownItem
+    margin-left: 10px
 
     
