Correciones en todo

--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -28,6 +28,7 @@ $fontColorDark: #000000
   text-decoration: none
   color: $fontColor
   font-weight: bold !important
+  margin-top: -8px
 
 .navBarBrand
   text-decoration: none
@@ -41,7 +42,8 @@ $fontColorDark: #000000
   text-decoration: none
   color: $fontColor
   margin-right: 20px
-  margin-top: 8px
+  margin-top: auto
+  margin-bottom: 15px
   padding: auto
   font-weight: bold !important
   
