--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -13,7 +13,6 @@ $fontColorDark: #000000
     margin: 10px auto 10px auto !important
     padding: auto !important
 
-
 .tablaEmpresas thead tr th
     min-width: 120px !important
 
@@ -35,6 +34,7 @@ $fontColorDark: #000000
 
 .tablaCostosVar
     width: 10% !important
+    background-color: white !important
 
 .centerText
     vertical-align: middle !important
@@ -54,19 +54,32 @@ $fontColorDark: #000000
 .buttonSecondaryDark
     background-color: $secondaryColorDark !important
     color: $fontColor
-    
-
 
 .tdTitulo
-    font-weight: bold 
+    font-weight: bold
 
 .smallFont
     font-size: 13.5px
-
 
 .bgDarkColor li
     background-color: $primaryColor !important
     color: white !important
     border: 1px solid white !important
 
+.infoProducto
+    max-width: 60vw !important
 
+.celdaSticky
+    position: sticky !important
+    left: 0
+    background-color: #e9ecef !important
+    color: black !important
+
+    border-collapse: separate !important
+
+.listaElementos
+    list-style-type: lower-greek
+
+.no-margin
+    margin: 0 !important
+    padding: 0 !important
