--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -10,3 +10,12 @@ p
 
 h5
   text-align: center
+
+ul
+    list-style-type: none
+
+thead
+  text-align: center
+
+alinearIzquierda
+  text-align: end !important
