paginas de Teoria

--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -1,21 +1,63 @@
-a
-  text-decoration: none !important
+$primaryColor: #0277bd
+$secondaryColor: #7986cb
+$secondaryColorLigth: #aab6fe
+$secondaryColorDark: #49599a
+$darkColor: #004c8c
+$ligthColor: #58a5f0
+$fontColor: #ffffff
+$fontColorDark: #000000
+.textosEncuadre
+  margin: auto 5%
+  text-align: justify
+  min-height: 14em
+.textosEncuadre h5
+  text-align: center
+.textosEncuadre ol > li::marker
+  font-weight: bold
 
-p
+
+.textosEncuadre a
+  text-decoration: none !important
+  color: $primaryColor !important
+  cursor: pointer
+
+.textosEncuadre p
   text-align: justify
 
 .CentrarTexto
   text-align: center !important
   font-weight: bold !important
 
-h5
-  text-align: center
-
-ul
+.NoPuntear ul
     list-style-type: none
 
-thead
+.textosEncuadre thead
   text-align: center
 
-alinearIzquierda
+.alinearDerecha
   text-align: end !important
+
+.alinearCentro
+  text-align: center !important
+  justify-content: center !important
+  align-content: center !important
+  align-items: center !important
+
+Table
+  margin: auto
+
+.tabla1
+  width: 40% !important
+
+.tabla2
+  width: 50% !important
+
+.tabla3
+  width: 50% !important
+
+.tabla4
+  width: 55% !important
+  text-align: center
+
+.azul
+  color: $primaryColor
