--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -16,6 +16,9 @@ $fontColorDark: #000000
 .tablaEmpresas thead tr th
     min-width: 120px !important
 
+.tablaEmpresasAzul thead tr th
+    background-color: $ligthColor
+
 .overflowForce
     overflow: auto !important
     display: block !important
