key errors on list elements fixed

--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -86,3 +86,6 @@ $fontColorDark: #000000
 .no-margin
     margin: 0 !important
     padding: 0 !important
+
+.minH100vh
+    min-height: 100vh !important
