--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -11,10 +11,6 @@ $fontColorDark: #000000
 body
     padding: 0
     margin: 0
-    background-color: #ececec
-
-*
-    margin: 0
 
 .tarjeta
     width: 20%
@@ -35,7 +31,7 @@ body
     margin-left: 10%
 
 .empresaInput
-    padding: 2vw
+    padding: 0
     margin: auto
     width: 50% !important
     text-align: center
@@ -71,8 +67,7 @@ body
     padding-top: 2vw
 
 .checkBox
-    margin: 5px
-    padding: 5px
+    margin: 5px !important
 
 .checkboxContainer
     display: flex
@@ -89,7 +84,6 @@ body
 .steperButton
     border-radius: 70px !important
     padding: 0px !important
-    margin: 0px !important
 
 .inputPorcentajes
     display: flex !important
@@ -98,6 +92,5 @@ body
 
 .dropdownItem
     margin-left: 10px
-
 
     
