--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -11,11 +11,20 @@ $fontColorDark: #000000
 body
     padding: 0
     margin: 0
+.tarjetas
+    display: flex
+    align-items: stretch
+    flex-wrap: wrap
+    flex-direction: row
+    justify-content: center
+    margin-top: 2%
+
+.textoTrjetas
+    height: 50%
 
 .tarjeta
-    width: 20%
-    display: inline-block !important
     margin: 1%
+    width: 20rem
 
 .cardHeader
     font-weight: bold !important
