--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -85,10 +85,20 @@ body
 
 .carrusel
     color: black !important
-    height: 100%
+    height: 100% !important
 
 .imgC
-    max-height: 340px
+    max-height: 330px
+    min-height: 330px
+    @media (max-width: 780px)
+        max-height: 465px !important
+        min-height: 465px !important
+
+.scrollText
+    @media (max-width: 665px)
+        overflow-y: scroll
+    max-height: 410px !important
+    min-height: 410px !important
 
 .steperButton
     border-radius: 70px !important
@@ -101,5 +111,3 @@ body
 
 .dropdownItem
     margin-left: 10px
-
-    
