arreglando las tarjetas

--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -20,11 +20,12 @@ body
     margin-top: 2%
 
 .textoTrjetas
-    height: 50%
+    height: 40%
 
 .tarjeta
     margin: 1%
     width: 20rem
+    height: 12rem
 
 .cardHeader
     font-weight: bold !important
