--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -8,14 +8,12 @@ $ligthColor: #58a5f0
 $fontColor: #ffffff
 $fontColorDark: #000000
 
-
 #navBar
   background-color: $primaryColor
   color: white
   margin: 0
   padding: 0
   height: 50px
-  
 
 #responsive-navbar-nav
   background-color: $primaryColor
@@ -35,18 +33,34 @@ $fontColorDark: #000000
   font: bolder
   font-weight: bold
   color: $fontColor
-  font-size: 17px
-  margin-left: 5px
+  font-size: 14px
+  margin-left: 4px
+  @media (max-width: 770px)
+    display: none !important
+
+.navBarBrand2
+  text-decoration: none
+  font: bolder
+  font-weight: bold
+  color: $fontColor
+  font-size: 16px
+  display: none
+  margin-left: 4px
+  @media (max-width: 770px)
+    display: block !important
 
 .navBarItem
   text-decoration: none
   color: $fontColor
-  margin-right: 20px
+  margin-right: 15px
   margin-top: auto
   margin-bottom: 15px
   padding: auto
   font-weight: bold !important
-  
+
 #footer
-  background-color: $ligthColor
-  color: $fontColorDark
+  background-color: $primaryColor
+  color: white
+
+.dropdown-menu
+  position: absolute !important
