--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -35,6 +35,7 @@ body
 .pagina
     text-align: center
     justify-content: center
+    min-height: 500px !important
 
 .textoIntro
     margin-right: 10%
@@ -70,7 +71,16 @@ body
     left: 10px
     top: 50px
     z-index: 999
-    border-radius: 50px !important
+    border-radius: 60px !important
+    padding: 0px !important
+
+.btnFlotanteRigth
+    position: absolute
+    right: 10px
+    top: 50px
+    z-index: 999
+    border-radius: 60px !important
+    padding: 0px !important
 
 .generalBody
     padding-bottom: 2vw
@@ -98,8 +108,8 @@ body
 .scrollText
     @media (max-width: 665px)
         overflow-y: scroll
-    max-height: 410px !important
-    min-height: 410px !important
+        max-height: 410px !important
+        min-height: 410px !important
 
 .steperButton
     border-radius: 70px !important
@@ -112,3 +122,19 @@ body
 
 .dropdownItem
     margin-left: 10px
+
+.listaRequerimientos
+    display: inline-block
+    text-align: left
+
+.listaRequerimientosli
+    font-weight: bold
+
+.githubLink
+    text-decoration: none
+    font-weight: 300
+    color: white
+
+.mobileH1
+    @media (max-width: 1100px)
+        margin-top: 25px
