--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -47,17 +47,40 @@ Table
   margin: auto
 
 .tabla1
+  @media (max-width: 800px)
+    width: 90% !important
   width: 40% !important
 
 .tabla2
+  @media (max-width: 800px)
+    width: 100% !important
   width: 50% !important
 
 .tabla3
+  @media (max-width: 800px)
+    overflow-x: scroll
+    width: 90% !important
   width: 50% !important
 
 .tabla4
+  @media (max-width: 1050px)
+    overflow-x: scroll
+    width: 100% !important
   width: 55% !important
   text-align: center
 
+.tabla5
+  @media (max-width: 1100px)
+    width: 90% !important
+  width: 50% !important
+
 .azul
   color: $primaryColor
+
+.formulaLarga
+  width: 100%
+  margin: auto
+
+.Imagenes
+  @media (max-width: 800px)
+    width: 90% !important
