Responsividad en tablas e inputs

--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -89,3 +89,6 @@ $fontColorDark: #000000
 
 .minH100vh
     min-height: 100vh !important
+    @media (max-width: 500px)
+        min-height: 50vh !important
+    
