--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -44,13 +44,19 @@ body
 .empresaInput
     padding: 0
     margin: auto
-    width: 50% !important
+    max-width: 400px !important
     text-align: center
 
 .empresaInputMain
     padding: auto
     margin: auto
     max-width: 500px
+    text-align: center
+
+.inputMargin
+    max-width: 400px !important
+    margin: 5px !important
+    padding: 5px !important
     text-align: center
 
 .empresaInputForm
@@ -82,6 +88,10 @@ body
     border-radius: 60px !important
     padding: 0px !important
 
+.btnBkHome
+    background-color: $primaryColor
+    padding: 1px !important
+    
 .generalBody
     padding-bottom: 2vw
     padding-top: 2vw
@@ -138,3 +148,7 @@ body
 .mobileH1
     @media (max-width: 1100px)
         margin-top: 25px
+
+.maxWidthImg
+    max-width: 375px
+    height: auto
