elementos responsive, teoria parte 2 y referencias

--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -35,8 +35,9 @@ $fontColorDark: #000000
   color: $fontColor
   font-size: 14px
   margin-left: 4px
-  @media (max-width: 770px)
-    display: none !important
+  @media (max-width: 700px)
+    font-size: 10px
+
 
 .navBarBrand2
   text-decoration: none
@@ -44,10 +45,9 @@ $fontColorDark: #000000
   font-weight: bold
   color: $fontColor
   font-size: 16px
-  display: none
   margin-left: 4px
-  @media (max-width: 770px)
-    display: block !important
+  @media (max-width: 380px)
+    font-size: 12px
 
 .navBarItem
   text-decoration: none
