--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -16,8 +16,7 @@ $fontColorDark: #000000
   font-weight: bold
 
 
-.textosEncuadre a
-  text-decoration: none !important
+.textosEncuadre span
   color: $primaryColor !important
   cursor: pointer
 
@@ -58,29 +57,35 @@ Table
 
 .tabla3
   @media (max-width: 800px)
-    overflow-x: scroll
     width: 90% !important
   width: 50% !important
 
 .tabla4
   @media (max-width: 1050px)
-    overflow-x: scroll
     width: 100% !important
   width: 55% !important
   text-align: center
 
 .tabla5
-  @media (max-width: 1100px)
-    width: 90% !important
+  @media (max-width: 900px)
+    width: 80% !important
+  @media (max-width: 500px)
+    width: 130% !important
   width: 50% !important
 
 .azul
   color: $primaryColor
 
+.scrollTabla
+  overflow-x: auto !important
+
 .formulaLarga
   width: 100%
   margin: auto
 
+.imagenTabla
+  width: 280px
+
 .Imagenes
   @media (max-width: 800px)
-    width: 90% !important
+    width: 95% !important
