Imagenes agregadas a las secciones del carrusel

--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -1,4 +1,4 @@
-$primaryColor: #0277bd
+$primaryColor: #2a9d8f
 $secondaryColor: #7986cb
 $secondaryColorLigth: #aab6fe
 $secondaryColorDark: #49599a
