--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -1,5 +1,5 @@
 $fontStack: Helvetica, sans-serif
-$primaryColor: #0277bd
+$primaryColor: #2a9d8f
 $secondaryColor: #7986cb
 $secondaryColorLigth: #aab6fe
 $secondaryColorDark: #49599a
