--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -36,12 +36,17 @@ $fontColorDark: #000000
 .alinearDerecha
   text-align: end !important
 
+.alinearIzquierda
+  text-align: left !important
+
 .alinearCentro
   text-align: center !important
   justify-content: center !important
   align-content: center !important
   align-items: center !important
 
+.verticalAlign
+  vertical-align: middle
 Table
   margin: auto
 
