Correciones en las imagenes de la  teoria

--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -15,7 +15,6 @@ $fontColorDark: #000000
 .textosEncuadre ol > li::marker
   font-weight: bold
 
-
 .textosEncuadre span
   color: $primaryColor !important
   cursor: pointer
@@ -28,7 +27,7 @@ $fontColorDark: #000000
   font-weight: bold !important
 
 .NoPuntear ul
-    list-style-type: none
+  list-style-type: none
 
 .textosEncuadre thead
   text-align: center
@@ -53,30 +52,30 @@ Table
 .tabla1
   @media (max-width: 800px)
     width: 90% !important
-  width: 40% !important
+    width: 40% !important
 
 .tabla2
   @media (max-width: 800px)
     width: 100% !important
-  width: 50% !important
+    width: 50% !important
 
 .tabla3
   @media (max-width: 800px)
     width: 90% !important
-  width: 50% !important
+    width: 50% !important
 
 .tabla4
   @media (max-width: 1050px)
     width: 100% !important
-  width: 55% !important
-  text-align: center
+    width: 55% !important
+    text-align: center
 
 .tabla5
   @media (max-width: 900px)
     width: 80% !important
   @media (max-width: 500px)
     width: 130% !important
-  width: 50% !important
+    width: 50% !important
 
 .azul
   color: $primaryColor
@@ -92,5 +91,21 @@ Table
   width: 280px
 
 .Imagenes
+  @media (max-width: 800px)
+    width: 95% !important
+
+.max-width-1000
+  max-width: 1000px
+  width: auto
+  @media (max-width: 800px)
+    width: 95% !important
+
+.teoriaSection
+  text-align: center
+  justify-content: center
+
+.max-width-800
+  max-width: 800px
+  width: auto
   @media (max-width: 800px)
     width: 95% !important
