--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -97,7 +97,7 @@ Table
 .max-width-1000
   max-width: 1000px
   width: auto
-  @media (max-width: 800px)
+  @media (max-width: 1000px)
     width: 95% !important
 
 .teoriaSection
@@ -109,3 +109,25 @@ Table
   width: auto
   @media (max-width: 800px)
     width: 95% !important
+
+.max-width-500
+  max-width: 500px
+  width: auto
+  @media (max-width: 500px)
+    width: 95% !important
+
+.max-width-600
+  max-width: 600px
+  width: auto
+  @media (max-width: 600px)
+    width: 95% !important
+
+.leftAlign
+  text-align: left
+  justify-content: left
+
+
+.glosarioSelected
+  background-color: #c8f1ed
+  border-radius: 15px
+  padding: 0 8px 1px 8px
