--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -5,9 +5,12 @@ $ligthColor: #2a9d8f
 $fontColor: #ffffff
 $fontColorDark: #000000
 
+.generalBody
+    font-size: 17px
 body
     padding: 0
     margin: 0
+
 .tarjetas
     display: flex
     align-items: stretch
