--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -61,6 +61,7 @@ $fontColorDark: #000000
 #footer
   background-color: $primaryColor
   color: white
+  width: 100%
 
 .dropdown-menu
   position: absolute !important
