--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -26,7 +26,7 @@ body
 .tarjeta
     margin: 1%
     width: 20rem
-    height: 12rem
+    height: 14rem
 
 .cardHeader
     font-weight: bold !important
@@ -187,7 +187,6 @@ body
         left: 50%
         transform: translate(-50%, -50%)
 
-
 .carruselIMGEval
     position: absolute
     z-index: 0
@@ -198,3 +197,9 @@ body
     left: 50%
     transform: translate(-50%, -50%)
     max-height: 350px
+
+.transparente
+    background-color: #ffffff !important
+    border: 0px solid $primaryColor !important
+    padding: 0px
+    margin: 0px
