Modal con costos fijos

--- a/src/Styles/Modal.sass
+++ b/src/Styles/Modal.sass
@@ -92,3 +92,6 @@ $fontColorDark: #000000
     padding: 25px
     border: 2px white solid
     margin-bottom: 0
+
+.modalHeader
+    background-color: $primaryColor !important
