--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -203,3 +203,10 @@ body
     border: 0px solid $primaryColor !important
     padding: 0px
     margin: 0px
+
+.modalHeader
+    background-color: $primaryColor !important
+
+.modalTitle
+    color: #ffffff !important
+    font-weight: 600
