--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -3,7 +3,7 @@ $secondaryColor: #7986cb
 $secondaryColorLigth: #aab6fe
 $secondaryColorDark: #49599a
 $darkColor: #004c8c
-$ligthColor: #58a5f0
+$ligthColor: #72c4b9
 $fontColor: #ffffff
 $fontColorDark: #000000
 .textosEncuadre
@@ -126,8 +126,49 @@ Table
   text-align: left
   justify-content: left
 
-
 .glosarioSelected
   background-color: #c8f1ed
   border-radius: 15px
   padding: 0 8px 1px 8px
+
+#cardI
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  flex-basis: 1
+  justify-content: space-around
+  margin: auto
+  max-width: 1200px !important
+
+#cardI div
+  flex: 1
+  background-color: #c8f1ed
+  max-width: 280px
+  min-width: 280px
+  color: black
+  border-radius: 20px
+  padding: 10px
+  text-align: left
+  color: black
+  margin-bottom: 30px
+  max-height: 310px
+  min-height: 310px
+
+.manual
+  justify-content: center !important
+  text-align: center !important
+
+.manual p
+  margin: auto
+
+.manual > h5
+  margin-top: 20px !important
+
+.hr90
+  max-width: 90vw
+
+.listaManual
+  list-style-type: none
+
+.maxWidth-800
+  max-width: 1000px
