--- a/src/Styles/Teoria.sass
+++ b/src/Styles/Teoria.sass
@@ -172,3 +172,19 @@ Table
 
 .maxWidth-800
   max-width: 1000px
+
+.fuente
+  font-size: 13px
+
+
+.contactosI
+  max-height: 275px !important
+  max-width: 275px !important
+  border-radius: 15px
+
+.semblanza
+  max-width: 500px
+  margin: auto
+
+.fnt20
+  font-size: 22px
