--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -13,7 +13,14 @@ $fontColorDark: #000000
   color: white
   margin: 0
   padding: 0
-  height: 50px
+  height: 90px
+  flex-wrap: wrap
+  @media (max-width: 540px)
+    height: 105px
+
+#navBar2
+  background-color: #000
+  max-width: 100vw
 
 #responsive-navbar-nav
   background-color: $primaryColor
@@ -64,3 +71,13 @@ $fontColorDark: #000000
 
 .dropdown-menu
   position: absolute !important
+
+
+#barra
+  justify-content: center
+  text-align: center
+  margin: auto
+
+.logoHide
+  @media (max-width: 610px)
+    display: none !important
