Cambio de imagen practica

--- a/src/Styles/Tablas.sass
+++ b/src/Styles/Tablas.sass
@@ -51,7 +51,7 @@ $fontColorDark: #000000
     font-weight: bold !important
 
 .buttonSecondary
-    background-color: $ligthColor !important
+    background-color: $primaryColor !important
     font-weight: bold !important
 
 .buttonSecondaryDark
@@ -91,3 +91,10 @@ $fontColorDark: #000000
     min-height: 100vh !important
     @media (max-width: 500px)
         min-height: 50vh !important
+
+.textButton
+    border: 0
+    background: none
+    color: $primaryColor
+    text-decoration: underline
+    font-weight: bold
