--- a/src/Styles/main.sass
+++ b/src/Styles/main.sass
@@ -76,7 +76,7 @@ body
 .btnFlotante
     position: absolute
     left: 10px
-    top: 50px
+    top: 90px
     z-index: 999
     border-radius: 60px !important
     padding: 0px !important
@@ -84,7 +84,7 @@ body
 .btnFlotanteRigth
     position: absolute
     right: 10px
-    top: 50px
+    top: 90px
     z-index: 999
     border-radius: 60px !important
     padding: 0px !important
@@ -210,3 +210,10 @@ body
 .modalTitle
     color: #ffffff !important
     font-weight: 600
+
+.ulNoStyle
+    list-style-type: none
+
+.barraTexto
+    margin-top: 8px
+    margin-bottom: 5px
