--- a/src/Styles/Navbar.sass
+++ b/src/Styles/Navbar.sass
@@ -19,8 +19,14 @@ $fontColorDark: #000000
     height: 105px
 
 #navBar2
-  background-color: #000
+  background-color: #e2e2e2
   max-width: 100vw
+  color: #000 !important
+  font-size: 18px
+  margin-bottom: 0 !important
+  padding-bottom: 0 !important
+  font-weight: bold
+  justify-content: center !important
 
 #responsive-navbar-nav
   background-color: $primaryColor
@@ -76,8 +82,11 @@ $fontColorDark: #000000
 #barra
   justify-content: center
   text-align: center
-  margin: auto
+
 
 .logoHide
-  @media (max-width: 610px)
+  margin-left: 20px
+  margin-right: 20px
+  @media (max-width: 770px)
     display: none !important
+    margin: 0px
